# learningprogamation

./: .gitignore  README.md  Untitled-1.ipynb  boltzman_analizado.csv
Algoritmos con Python/: Algoritmos-Estrucutras-de-Datos.ipynb  kmeans.ipynb  kmeans.py
Base de Datos Universidad/Clases/: Clase02.ipynb
Base de Datos Universidad/TareaUnidadPandas1/: SDSS_stars.csv  SDSS_wd.csv  fabiantrigo_TareaUnidad1.ipynb
Boltzman Law/: analisis_boltzmann.ipynb
C Language/: 3-Constantes.c  6-tomar-input-calcular.c  formato2.c
C Language/Code-In-C-Lang del Libro Comp Physics/: 2-3-2-Area-Circulo.c
C++/: compilar.txt  graph.py  plantilla.cpp
C++/cpp_cmake/: README.md
Electrodynamics/: E_2D.ipynb  E_3D_integrator_wip.ipynb  E_3D_noAprox.ipynb  E_discrete_charges.ipynb  Qdata.csv  datosS.csv  main_development.ipynb
Guia Apuntes de C/: 4-argumentos.c  5-argumentos-extras.c  formateos.c  sizes_de_datos.c
Parallel Programming - 2023/: README.md
Parallel Programming - 2023/Algoritmos/heapsort_cmake/: CMakeLists.txt  README.md
Python Intermedio/: OrientadaAObjetos.ipynb  PythonIntermedio.html  PythonIntermedio.ipynb
SDSS Analysis - Stats101/: 0_clean_outliers.ipynb  2_regresion.ipynb  3_infrarred_analysis.ipynb  4_covarianzas.ipynb  5_descripcion_variables.ipynb  descripciones.txt  estadisticas.py  main.ipynb  organization.md  regresion.ipynb  tabla_correlaciones.py  test_est.py
Tarea Final Base Datos/: BD_AlerceLike_Notebook_Trigo.ipynb  main.ipynb
Transformada Fourier - Stats101/: fft_teoremakarhunen.ipynb  guion intro.txt  links.txt  links_para_seguir.html
(+109 files in other folders)
